# mlops-bootcamp-e7

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.cm/: gitstream.cm
.dvc/: config
.github/workflows/: terraform.yml  train.yml
conf/: config.yaml
data/final/: .gitignore  clustered_online_retail.csv.dvc
data/processed/: .gitignore
data/raw/: .gitignore  online_retail.csv.dvc  online_retail_raw.csv.dvc
docs/: .gitignore  pie_graph_compras.png.dvc  pie_graph_poblacion.png.dvc
notebooks/: Eda.ipynb  cluster.ipynb  exploratory_data_analysis.ipynb  rfm_analysis.ipynb
src/: config.py  constants.py  process_data.py
src/data_preprocess/: clean_data.py
src/rfm/: rfm_scoring.py
src/stages/: data_prepare.py  data_scaling.py  elbow.py  evaluate.py  featurize.py  train.py
src/train/: train.py
src/utils/: mlflow_run_decorator.py  start_pipeline.py  upload_results.py
terraform/backend/: main.tf  terraform.tfstate  variables.tf
terraform/infra/: .terraform.lock.hcl  datalake.tf  main.tf  users.tf  variables.tf
terraform/modules/dev_users/: iam_policy.tf  iam_user.tf  iam_user_group.tf  main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: dynamotable.tf  main.tf  output.tf  variables.tf
terraform/modules/s3/: bucket.tf  encryption.tf  output.tf  versioning.tf
