[tool.poetry]
name = "mlops-bootcamp-e7"
version = "0.1.0"
description = "Proyecto con implementacion End-to-End de un pipeline de MLOps"
authors = ["Adrian Trujillo, Hugo Ramirez, Laura Valenzuela, Ricardo Diaz"]
readme = "README.md"
packages = [{include = "mlops_bootcamp_e7"}]

[tool.poetry.dependencies]
python = ">=3.11"
ipykernel = "^6.23.2"
notebook = "^6.5.4"
pyarrow = "^12.0.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
ipywidgets = "^8.0.6"
plotnine = "^0.12.1"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
plotnine3d = "^0.0.6"
plotly = "^5.15.0"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "N", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
