[tool.poetry]
name = "mlops-bootcamp-e7"
version = "0.1.0"
description = "Proyecto con implementacion End-to-End de un pipeline de MLOps"
authors = ["Adrian Trujillo, Hugo Ramirez, Laura Valenzuela, Ricardo Diaz"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.23.2"
jupyter = "^1.0.0"
notebook = "^6.5.4"
numpy = "^1.24.3"
pandas = "^2.0.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
plotnine3d = "^0.0.6"
plotly = "^5.15.0"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
dvc-s3 = "^3.2.0"
colorama = "^0.4.6"
termcolor = "^2.4.0"
yellowbrick = "^1.5"
mlflow = "^2.16.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
